--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -583,5 +583,6 @@
   "dn34:2.1.135": "Or alternatively ...",
   "dn34:2.1.136": "he is reborn among close minded, ignorant people in hard to reach places where there is no access to monks, nuns, laymen, or laywomen",
   "dn34:2.1.137": "This is the fifth inopportune, inconvenient occasion for living the holy life.",
-  "dn34:2.1.138": "Or alternatively ..."
+  "dn34:2.1.138": "Or alternatively ...",
+  "dn34:2.1.139": "This person is reborn amongst the people of the central country, but he has wrong view and sees things backwards (XXXwhat is the nom of dassano?XXX):"
 }
