--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -589,5 +589,6 @@
   "dn34:2.1.141": "This is the sixth inopportune, inconvenient occasion for living the holy life.",
   "dn34:2.1.142": "Or alternatively ...",
   "dn34:2.1.143": "This person is reborn amongst the people of the central country, but he lacks discernment, is slow-witted, deaf, mute, and is unable to understand the distinction between what is well-said and what is poorly-said.",
-  "dn34:2.1.144": "This is the seventh inopportune, inconvenient occasion for living the holy life."
+  "dn34:2.1.144": "This is the seventh inopportune, inconvenient occasion for living the holy life.",
+  "dn34:2.1.145": "Or alternatively ..."
 }
