--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -590,5 +590,6 @@
   "dn34:2.1.142": "Or alternatively ...",
   "dn34:2.1.143": "This person is reborn amongst the people of the central country, but he lacks discernment, is slow-witted, deaf, mute, and is unable to understand the distinction between what is well-said and what is poorly-said.",
   "dn34:2.1.144": "This is the seventh inopportune, inconvenient occasion for living the holy life.",
-  "dn34:2.1.145": "Or alternatively ..."
+  "dn34:2.1.145": "Or alternatively ...",
+  "dn34:2.1.146": "And this person is reborn amongst the people of the central country, is discerning, is quick-witted, can hear and speak, and is able to understand the distinction between what is well-said and what is poorly-said."
 }
