--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -593,5 +593,6 @@
   "dn34:2.1.145": "Or alternatively, a Such-Attained One, a Worthy One, a Fully Enlightened Buddha has not arisen in the world. And so does not teach the Dhamma that leads to peace, that leads to Nibbāna, that goes to full enlightenment, that is declared by those Well Gone.",
   "dn34:2.1.146": "And this person is reborn amongst the people of the central country, is discerning, is quick-witted, can hear and speak, and is able to understand the distinction between what is well-said and what is poorly-said.",
   "dn34:2.1.147": "This is the eighth inopportune, inconvenient occasion for living the holy life.",
-  "dn34:2.1.148": "These are the eight things that are hard to penetrate."
+  "dn34:2.1.148": "These are the eight things that are hard to penetrate.",
+  "dn34:2.1.149": "What are the eight things that are to be encouraged?"
 }
