--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -597,5 +597,6 @@
   "dn34:2.1.149": "What are the eight things that are to be encouraged?",
   "dn34:2.1.150": "The eight thoughts of a great man—",
   "dn34:2.1.151": "This teaching is for one of few wishes. This teaching is not for one of many wishes.",
-  "dn34:2.1.152": "This teaching is for one who is content. This teaching is not for one who is discontent."
+  "dn34:2.1.152": "This teaching is for one who is content. This teaching is not for one who is discontent.",
+  "dn34:2.1.153": "This teaching is for one who is disentangled. This teaching is not for one who loves company."
 }
