--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -599,5 +599,6 @@
   "dn34:2.1.151": "This teaching is for one of few wishes. This teaching is not for one of many wishes.",
   "dn34:2.1.152": "This teaching is for one who is content. This teaching is not for one who is discontent.",
   "dn34:2.1.153": "This teaching is for one who is disentangled. This teaching is not for one who loves company.",
-  "dn34:2.1.154": "This teaching is for one of resolute energy. This teaching is not for one who is lazy."
+  "dn34:2.1.154": "This teaching is for one of resolute energy. This teaching is not for one who is lazy.",
+  "dn34:2.1.155": "This teaching is for one whose mindfulness is established. This teaching is not for one who is inattentive to mindfulness."
 }
