--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -62,6 +62,7 @@
   "mn7:5.16": "apgaulingumas …",
   "mn7:5.18": "veidmainystė …",
   "mn7:5.20": "užsispirimas …",
+  "mn7:5.22": "kietasprandiškumas …",
   "mn7:5.30": "supratęs, kad nerūpestingumas yra proto teršalas,",
   "mn7:5.31": "atsikratė to taršalo,",
   "mn7:5.32": "jis turi (tokį) patirtimi grįstą pasitikėjimą Buda:",
