--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn56.44:0.1": "Verbundene Lehrreden 56 ",
   "sn56.44:0.2": "5. Eine Klippe ",
-  "sn56.44:0.3": "44. Ein Giebelhaus "
+  "sn56.44:0.3": "44. Ein Giebelhaus ",
+  "sn56.44:1.1": "„Mönche und Nonnen, angenommen, da würde jemand sagen: "
 }
