--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn56.44:0.3": "44. Ein Giebelhaus ",
   "sn56.44:1.1": "„Mönche und Nonnen, angenommen, da würde jemand sagen: ",
   "sn56.44:1.2": "‚Ohne die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt, wahrhaftig zu verstehen, will ich dem Leiden gänzlich ein Ende machen.‘ ",
-  "sn56.44:1.3": "Das ist nicht möglich. "
+  "sn56.44:1.3": "Das ist nicht möglich. ",
+  "sn56.44:2.1": "Wie wenn jemand sagen würde: "
 }
