--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn56.44:1.3": "Das ist nicht möglich. ",
   "sn56.44:2.1": "Wie wenn jemand sagen würde: ",
   "sn56.44:2.2": "‚Bevor das Untergeschoss eines Giebelhauses gebaut ist, will ich das Obergeschoss erklimmen.‘ ",
-  "sn56.44:2.3": "Das ist nicht möglich. "
+  "sn56.44:2.3": "Das ist nicht möglich. ",
+  "sn56.44:2.4": "Ebenso ist es, wenn jemand sagen würde: "
 }
