--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn56.44:2.6": "Das ist nicht möglich. ",
   "sn56.44:3.1": "Aber angenommen, da würde jemand sagen: ",
   "sn56.44:3.2": "‚Nachdem ich die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt, wahrhaftig verstanden habe, will ich dem Leiden gänzlich ein Ende machen.‘ ",
-  "sn56.44:3.3": "Das ist möglich. "
+  "sn56.44:3.3": "Das ist möglich. ",
+  "sn56.44:4.1": "Wie wenn jemand sagen würde: "
 }
