--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn56.44:3.3": "Das ist möglich. ",
   "sn56.44:4.1": "Wie wenn jemand sagen würde: ",
   "sn56.44:4.2": "‚Nachdem das Untergeschoss eines Giebelhauses gebaut ist, will ich das Obergeschoss erklimmen.‘ ",
-  "sn56.44:4.3": "Das ist möglich. "
+  "sn56.44:4.3": "Das ist möglich. ",
+  "sn56.44:4.4": "Ebenso ist es, wenn jemand sagen würde: "
 }
