--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.45:0.2": "5. Eine Klippe ",
   "sn56.45:0.3": "45. Haare spalten ",
   "sn56.45:1.1": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
-  "sn56.45:1.2": "Da kleidete sich der ehrwürdige Ānanda am Morgen an, nahm Schale und Robe und betrat Vesālī zum Almosengang. "
+  "sn56.45:1.2": "Da kleidete sich der ehrwürdige Ānanda am Morgen an, nahm Schale und Robe und betrat Vesālī zum Almosengang. ",
+  "sn56.45:1.3": "Er sah mehrere Licchaver Jugendliche, die sich im Bogenschießen übten. Sie schossen Pfeile aus großer Entfernung durch ein kleines Schlüsselloch, Schuss auf Schuss, ohne Fehlschuss. "
 }
