--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn56.45:1.3": "Er sah mehrere Licchaver Jugendliche, die sich im Bogenschießen übten. Sie schossen Pfeile aus großer Entfernung durch ein kleines Schlüsselloch, Schuss auf Schuss, ohne Fehlschuss. ",
   "sn56.45:1.4": "Bei diesem Anblick dachte er: ",
   "sn56.45:1.5": "„Diese Licchaver Jugendlichen sind wirklich geübt, gut geübt, ",
-  "sn56.45:1.6": "dass sie Pfeile aus großer Entfernung durch ein kleines Schlüsselloch schießen, Schuss auf Schuss, ohne Fehlschuss.“ "
+  "sn56.45:1.6": "dass sie Pfeile aus großer Entfernung durch ein kleines Schlüsselloch schießen, Schuss auf Schuss, ohne Fehlschuss.“ ",
+  "sn56.45:2.1": "Dann zog Ānanda um Almosen durch Vesālī. Nach dem Essen, als er vom Almosengang zurückkam, ging er zum Buddha, verbeugte sich, setzte sich zur Seite hin und berichtete ihm die Begebenheit. "
 }
