--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn56.45:2.1": "Dann zog Ānanda um Almosen durch Vesālī. Nach dem Essen, als er vom Almosengang zurückkam, ging er zum Buddha, verbeugte sich, setzte sich zur Seite hin und berichtete ihm die Begebenheit. ",
   "sn56.45:3.1": "„Was denkst du, Ānanda? ",
   "sn56.45:3.2": "Was ist schwieriger und schwerer zu erreichen: ",
-  "sn56.45:3.3": "Pfeile aus großer Entfernung durch ein kleines Schlüsselloch zu schießen, Schuss auf Schuss, ohne Fehlschuss? Oder ein Pferdehaar zu nehmen, das in sieben Stränge gespalten wurde, und eine Spitze mit einer anderen Spitze zu durchbohren?“ "
+  "sn56.45:3.3": "Pfeile aus großer Entfernung durch ein kleines Schlüsselloch zu schießen, Schuss auf Schuss, ohne Fehlschuss? Oder ein Pferdehaar zu nehmen, das in sieben Stränge gespalten wurde, und eine Spitze mit einer anderen Spitze zu durchbohren?“ ",
+  "sn56.45:3.4": "„Ein Pferdehaar zu nehmen, das in sieben Stränge gespalten wurde, und eine Spitze mit einer anderen Spitze zu durchbohren, ist schwieriger und schwerer zu erreichen.“ "
 }
