--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn56.45:3.1": "„Was denkst du, Ānanda? ",
   "sn56.45:3.2": "Was ist schwieriger und schwerer zu erreichen: ",
   "sn56.45:3.3": "Pfeile aus großer Entfernung durch ein kleines Schlüsselloch zu schießen, Schuss auf Schuss, ohne Fehlschuss? Oder ein Pferdehaar zu nehmen, das in sieben Stränge gespalten wurde, und eine Spitze mit einer anderen Spitze zu durchbohren?“ ",
-  "sn56.45:3.4": "„Ein Pferdehaar zu nehmen, das in sieben Stränge gespalten wurde, und eine Spitze mit einer anderen Spitze zu durchbohren, ist schwieriger und schwerer zu erreichen.“ "
+  "sn56.45:3.4": "„Ein Pferdehaar zu nehmen, das in sieben Stränge gespalten wurde, und eine Spitze mit einer anderen Spitze zu durchbohren, ist schwieriger und schwerer zu erreichen.“ ",
+  "sn56.45:3.5": "„Und, Ānanda, wer das Leiden wahrhaftig durchdringt, den Ursprung des Leidens, das Aufhören des Leidens und den Weg, der zum Aufhören des Leidens führt, der durchdringt etwas noch Schwierigeres als das. "
 }
