--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -679,6 +679,7 @@
   "sn-name:2051.sn56.47": "Ein Joch mit einer Öffnung (1) ",
   "sn-name:2052.sn56.48": "Ein Joch mit einer Öffnung (2) ",
   "sn-name:2053.sn56.49": "Sineru, der König der Berge (1) ",
+  "sn-name:2054.sn56.50": "Sineru, der König der Berge (2) ",
   "sn-name:2055.sn56-abhisamayavagga": "Über das Erfassen ",
   "sn-name:2066.sn56-pathamaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2077.sn56-dutiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide (2) ",
