--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -265,5 +265,6 @@
   "mn1:124-146.27": "અરહંતની છઠ્ઠી ભૂમિપરિચ્છેદની પૂર્ણતા.",
   "mn1:147.1": "અરહંત, સમ્મસંબુધ્ધ, તથાગત પણ પૃથ્વીને પ્રત્યક્ષ રીતે પૃથ્વી તરીકે જાણતા હોય છે;",
   "mn1:147.2": "પરંતુ પૃથ્વીને પ્રત્યક્ષ રીતે પૃથ્વી તરીકે જાણી તેઓ પોતાને પૃથ્વી નથી માનતા, પોતાને પૃથ્વીમાં નથી માનતા, પોતાને પૃથ્વીથી નથી માનતા, પૃથ્વી મારી છે એવું નથી માનતા, પૃથ્વીમાં આનંદ નથી લેતા.",
-  "mn1:147.3": "એ શેના માટે?"
+  "mn1:147.3": "એ શેના માટે?",
+  "mn1:147.4": "એમને સંપૂર્ણ઼પણે સમજ઼ાયુ છે એટલે, કહું છું."
 }
