--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -275,5 +275,6 @@
   "mn1:148-170.6": "પ્રજાપતિને પ્રજાપતિ …",
   "mn1:148-170.7": "બ્રહ્માને બ્રહ્મા …",
   "mn1:148-170.8": "આભાસર દેવોને અભાસર દેવો …",
-  "mn1:148-170.9": "સંદીપ્યમાન દેવોને સંદીપ્યમાન દેવો …"
+  "mn1:148-170.9": "સંદીપ્યમાન દેવોને સંદીપ્યમાન દેવો …",
+  "mn1:148-170.10": "મહાફળધારિ દેવોને મહાફળધારિ દેવો …"
 }
