--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -291,5 +291,6 @@
   "mn1:148-170.22": "સર્વને સર્વ …",
   "mn1:148-170.23": "નિર્વાણને પ્રત્યક્ષ રીતે નિર્વાણ તરીકે જાણે છે;",
   "mn1:148-170.24": "પરંતુ નિર્વાણને પ્રત્યક્ષ રીતે નિર્વાણ તરીકે જાણી તેઓ પોતાને નિર્વાણ નથી માનતા, પોતાને નિર્વાણમાં નથી માનતા, પોતાને નિર્વાણથી નથી માનતા, નિર્વાણ મારું છે એવું નથી માનતા, નિર્વાણમાં આનંદ નથી લેતા.",
-  "mn1:148-170.25": "એ શેના માટે?"
+  "mn1:148-170.25": "એ શેના માટે?",
+  "mn1:148-170.26": "એમને સંપૂર્ણ઼પણે સમજ઼ાયુ છે એટલે, કહું છું."
 }
