--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.49:0.2": "5. Eine Klippe ",
   "sn56.49:0.3": "49. Sineru, der König der Berge (1) ",
   "sn56.49:1.1": "„Mönche und Nonnen, angenommen, jemand würde sieben Kieselsteine in der Größe von Mungobohnen auf Sineru, den König der Berge, legen. ",
-  "sn56.49:1.2": "Was meint ihr, Mönche und Nonnen? "
+  "sn56.49:1.2": "Was meint ihr, Mönche und Nonnen? ",
+  "sn56.49:1.3": "Was ist mehr: Sieben Kieselsteine in der Größe von Mungobohnen? Oder Sineru, der König der Berge?“ "
 }
