--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn56.49:1.2": "Was meint ihr, Mönche und Nonnen? ",
   "sn56.49:1.3": "Was ist mehr: Sieben Kieselsteine in der Größe von Mungobohnen? Oder Sineru, der König der Berge?“ ",
   "sn56.49:1.4": "„Herr, Sineru, der König der Berge, ist sicherlich mehr. ",
-  "sn56.49:1.5": "Die sieben Kieselsteine in der Größe von Mungobohnen sind winzig. "
+  "sn56.49:1.5": "Die sieben Kieselsteine in der Größe von Mungobohnen sind winzig. ",
+  "sn56.49:1.6": "Verglichen mit Sineru zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ "
 }
