--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn56.49:1.4": "„Herr, Sineru, der König der Berge, ist sicherlich mehr. ",
   "sn56.49:1.5": "Die sieben Kieselsteine in der Größe von Mungobohnen sind winzig. ",
   "sn56.49:1.6": "Verglichen mit Sineru zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ ",
-  "sn56.49:1.7": "„Ebenso ist für einen edlen Schüler, der die Ansicht vervollkommnet hat, für einen Menschen, der sie erfasst hat, das Leiden, das vorbei und erledigt ist, viel mehr, und was übrig bleibt, ist winzig. "
+  "sn56.49:1.7": "„Ebenso ist für einen edlen Schüler, der die Ansicht vervollkommnet hat, für einen Menschen, der sie erfasst hat, das Leiden, das vorbei und erledigt ist, viel mehr, und was übrig bleibt, ist winzig. ",
+  "sn56.49:1.8": "Verglichen mit der Masse des Leidens in der Vergangenheit, das vorbei und erledigt ist, zählt es nicht, da ist kein Vergleich, es ist nicht einen Bruchteil wert, da es noch höchstens sieben weitere Leben gibt. "
 }
