--- a/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
@@ -171,7 +171,7 @@
   "mn1:75.1": "Un mendicante perfetto—con contaminanti eliminati, che ha completato il percorso spirituale, fatto ciò che c'era da fare, riposto il fardello, raggiunto il proprio vero obiettivo, assolutamente eliminato le catene dell'esistenza, ed è giustamente libero attraverso la realizzazione—conosce direttamente la terra come terra.",
   "mn1:75.2": "Ma non si identifica con la terra, non si identifica riguardo alla terra, non si identifica come la terra, non si identifica che 'la terra è mia', non trae piacere dalla terra.",
   "mn1:75.3": "Perché questo?",
-  "mn1:75.4": "Perché è libero dall'avarizia grazie all'eliminazione dell'avarizia.",
+  "mn1:75.4": "Perché è libero dall'avarizia grazie all'esaurimento dell'avarizia.",
   "mn1:76-98.1": "Conosce direttamente l'acqua …",
   "mn1:76-98.2": "il fuoco …",
   "mn1:76-98.3": "l'aria …",
