--- a/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
@@ -201,7 +201,7 @@
   "mn1:99.1": "Un mendicante perfetto—con contaminanti eliminati, che ha completato il percorso spirituale, fatto ciò che c'era da fare, riposto il fardello, raggiunto il proprio vero obiettivo, assolutamente eliminato le catene dell'esistenza, ed è giustamente libero attraverso la realizzazione—conosce direttamente la terra come terra.",
   "mn1:99.2": "Ma non si identifica con la terra, non si identifica riguardo alla terra, non si identifica come la terra, non si identifica che 'la terra è mia', non trae piacere dalla terra.",
   "mn1:99.3": "Perché questo?",
-  "mn1:99.4": "Perché è libero dall'odio grazie all'eliminazione dell'odio.",
+  "mn1:99.4": "Perché è libero dall'odio grazie all'esaurimento dell'odio.",
   "mn1:100-122.1": "Conosce direttamente l'acqua …",
   "mn1:100-122.2": "il fuoco …",
   "mn1:100-122.3": "l'aria …",
