--- a/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
@@ -293,7 +293,7 @@
   "mn1:171.3": "Perché questo?",
   "mn1:171.4": "Perché ha capito che il godimento è la radice della sofferenza.",
   "mn1:171.5": "e che la nascita risulta dalla continuazione dell'esistenza; chiunque continua ad esistere poi invecchia e muore.",
-  "mn1:171.6": "È per questo che il Realizzato—con l'eliminazione, lo svanire, la cessazione, l'abbandono, ed il lasciare andare ogni voglia—si è risvegliato al supremo perfetto Risveglio, dico io.",
+  "mn1:171.6": "È per questo che il Realizzato—con l'esaurimento, lo svanire, la cessazione, l'abbandono, ed il lasciare andare ogni voglia—si è risvegliato al supremo perfetto Risveglio, dico io.",
   "mn1:172-194.1": "Conosce direttamente l'acqua …",
   "mn1:172-194.2": "il fuoco …",
   "mn1:172-194.3": "l'aria …",
