--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.50_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.50:0.2": "5. Eine Klippe ",
   "sn56.50:0.3": "50. Sineru, der König der Berge (2) ",
   "sn56.50:1.1": "„Mönche und Nonnen, angenommen, Sineru, den König der Berge, wäre bis auf sieben senfkorngroße Kieselsteine abgetragen und weggespült worden. ",
-  "sn56.50:1.2": "Was meint ihr, Mönche und Nonnen? "
+  "sn56.50:1.2": "Was meint ihr, Mönche und Nonnen? ",
+  "sn56.50:1.3": "Was ist mehr: Sineru, der König der Berge, der abgetragen und weggespült wurde? Oder die verbliebenen sieben senfkorngroßen Kieselsteine?“"
 }
