--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.50_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn56.50:1.3": "Was ist mehr: der Teil von Sineru, dem König der Berge, der abgetragen und weggespült wurde? Oder die verbliebenen sieben senfkorngroßen Kieselsteine?“ ",
   "sn56.50:1.4": "„Herr, der Teil von Sineru, dem König der Berge, der abgetragen und weggespült wurde, ist sicherlich mehr. ",
   "sn56.50:1.5": "Die verbliebenen sieben senfkorngroßen Kieselsteine sind winzig. ",
-  "sn56.50:1.6": "Verglichen mit Sineru zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ "
+  "sn56.50:1.6": "Verglichen mit Sineru zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ ",
+  "sn56.50:1.7": "„Ebenso ist für einen edlen Schüler, der die Ansicht vervollkommnet hat, für einen Menschen, der sie erfasst hat, das Leiden, das vorbei und erledigt ist, viel mehr, und was übrig bleibt, ist winzig. "
 }
