--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -88,5 +88,6 @@
   "mn19:20.1": "Una volta che la mia mente è diventata così raccolta, l'ho estesa alla conoscenza della morte e rinascita degli esseri viventi.",
   "mn19:20.2": "Con chiaroveggenza purificata e sovrumana, ho visto gli esseri viventi morire e rinascere—inferiori e superiori, belli e brutti, in un bel posto o un brutto posto. Ho capito come gli esseri viventi rinascono secondo le proprie azioni.",
   "mn19:21.1": "Questa è stata la seconda conoscenza che ho raggiunto durante la parte intermedia della notte.",
-  "mn19:21.2": "L'ignoranza fu distrutta e la conoscenza sorse; l'oscurità fu distrutta e la luce sorse, come succede al meditatore diligente, entusiasta, e risoluto."
+  "mn19:21.2": "L'ignoranza fu distrutta e la conoscenza sorse; l'oscurità fu distrutta e la luce sorse, come succede al meditatore diligente, entusiasta, e risoluto.",
+  "mn19:22.1": "Una volta che la mia mente è diventata così raccolta, l'ho estesa alla conoscenza dell'esaurimento dei contaminanti."
 }
