--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -91,5 +91,6 @@
   "mn19:21.2": "L'ignoranza fu distrutta e la conoscenza sorse; l'oscurità fu distrutta e la luce sorse, come succede al meditatore diligente, entusiasta, e risoluto.",
   "mn19:22.1": "Una volta che la mia mente è diventata così raccolta, l'ho estesa alla conoscenza dell'esaurimento dei contaminanti.",
   "mn19:22.2": "Ho capito com'è davvero: ‘Questa è la sofferenza’ ... ‘Questa è l'origine della sofferenza’ ... ‘Questa è la cessazione della sofferenza’ ... ‘Questa è la pratica che porta alla cessazione della sofferenza’.",
-  "mn19:23.1": "Ho capito com'è davvero: ‘Questi sono i contaminanti’ ... ‘Questa è l'origine dei contaminanti’ ... ‘Questa è la cessazione dei contaminanti’ ... ‘Questa è la pratica che porta alla cessazione dei contaminanti’."
+  "mn19:23.1": "Ho capito com'è davvero: ‘Questi sono i contaminanti’ ... ‘Questa è l'origine dei contaminanti’ ... ‘Questa è la cessazione dei contaminanti’ ... ‘Questa è la pratica che porta alla cessazione dei contaminanti’.",
+  "mn19:23.2": "Conoscendo e vedendo così, la mia mente è stata liberata dai contaminanti della sensualità, del desiderio di continuare ad esistere, e dell'ignoranza."
 }
